--- a/templates/trouble_kill_edit.html
+++ b/templates/trouble_kill_edit.html
@@ -1,14 +1,302 @@
 {% extends 'layout.html' %}
 
+
+
+{% block css %}
+    <style>
+        * {
+            margin: 0px;
+            padding: 0px;
+        }
+
+        body {
+            background-color: #f9f9f9;
+        }
+
+        .clears {
+            clear: both;
+        }
+
+        /*messages*/
+        .messages {
+            padding: 15px 0;
+        }
+
+        .messages input, .messages select, .messages textarea {
+            margin: 0;
+            padding: 0;
+            background: none;
+            border: 0;
+        }
+
+        .messlist {
+            height: 30px;
+            margin-bottom: 10px;
+        }
+
+        .messlist label {
+            float: left;
+            width: 300px;
+            height: 30px;
+            font-size: 14px;
+            line-height: 30px;
+            text-align: center;
+            padding-right: 10px;
+        }
+
+        .messlist input {
+            float: left;
+            width: 300px;
+            height: 28px;
+            padding-left: 5px;
+            border: #ccc 1px solid;
+        }
+
+        .messlist.textareas {
+            height: auto;
+        }
+
+        .messlist textarea {
+            float: left;
+            width: 400px;
+            height: 110px;
+            padding: 5px;
+            border: #ccc 1px solid;
+        }
+
+        .messlist.yzms input {
+            width: 100px;
+        }
+
+        .messlist.yzms .yzmimg {
+            float: left;
+            margin-left: 10px;
+        }
+
+        .messsub {
+            padding: 0px 0 0 110px;
+        }
+
+        .messsub input {
+            width: 100px;
+            height: 35px;
+            background: #ddd;
+            font-size: 14px;
+            font-weight: bold;
+            cursor: pointer;
+            margin-right: 5px
+        }
+
+        .messsub input:hover {
+            background: #f60;
+            color: #fff;
+        }
+    .aa{
+        height: 30px;
+        font-size: 14px;
+            font-weight: bold;
+    }
+
+
+        .aa {
+            color: red;
+            width: 600px;
+            border: 40px;
+            position: relative;
+            margin: 10px;
+
+        }
+
+        .bb {
+            position: relative;
+            float: right;
+            margin-bottom: 10px;
+
+        }
+
+        .pagination {
+            margin: auto;
+            position: absolute;
+            margin-left: 30%;
+
+        }
+
+
+    </style>
+
+{% endblock %}
+
+
+
+
+
 {% block content %}
-    <form action="/trouble-kill.html?md=edit&nid={{ obj.id }}" method="POST">
+
+
+
+    <div class="sendbox">
+
+        <form  method="POST" class="messages">
+            <div class="messlist">
+                <label>房源标题</label>
+                <input name="title" type="text" placeholder={{ obj.title }}>
+
+            </div>
+            <div class="messlist">
+                <label>登记时间</label>
+                <input name="title" type="text" placeholder={{ obj.ctime }}>
+
+            </div>
+
+            <div class="messlist textareas">
+                <label>房源描述</label>
+                <textarea name="content" placeholder={{ obj.detail }}></textarea>
+                <div class="clears"></div>
+            </div>
+
+
+        </form>
+
+    </div>
+
+<div class="sendbox">
+
+    <form action="/trouble.html?md=bbb&nid={{ obj.id }}" method="POST">
         {% csrf_token %}
-        <div>
-            <p>{{ obj.title }}</p>
-            <p>{{ obj.detail }}</p>
-            <p>{{ obj.ctime }}</p>
+
+
+
+
+        <div class="messlist textareas">
+                <label>更进内容</label>
+               <textarea name="solution"  placeholder="更进内容"></textarea>
+                <div class="clears"></div>
         </div>
-        <textarea name="solution"></textarea>
-        <input type="submit" value="提交" />
+
+        <div class="messsub">
+            <input type="submit" value="提交" style="background:#00a3eb;color:#fff;"/>
+            <input type="reset" value="重填"/>
+        </div>
     </form>
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <table class="aa">
+
+
+        <div class="table aa" border="1">
+            {% for row in obj2 %}
+                *****************
+                <div>更进名称：{{ row.detail }}</div>
+                <div>更进人员：{{ row.bb.nickname }}</div>
+                <div>更进时间：{{ row.ptime }}</div>
+                *****************
+            {% endfor %}
+        </div>
+
+
+    </table>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    {#       <div class="aa">#}
+    {##}
+    {##}
+    {#        <table class="table aa" border="1">#}
+    {#            <tr>#}
+    {##}
+    {#                <td>更进标题</td>#}
+    {#                <td>更进人员</td>#}
+    {#                <td>更进时间</td>#}
+    {#            </tr>#}
+    {##}
+    {#            {% for row in obj2 %}#}
+    {#                <tr>#}
+    {#                    <div>{{ row.detail }}</div>#}
+    {#                    <div>{{ row.bb.nickname }}</div>#}
+    {#                    <div>{{ row.ptime }}</div>#}
+    {#            {% endfor %}#}
+    {##}
+    {##}
+    {#        </table>#}
+    {##}
+    {##}
+    {#    </div>#}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 {% endblock %}
